[package]
name = "hc-sr04"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "0.2.7"
panic-probe = { version = "0.3", features = ["print-defmt"] }
stm32f1xx-hal = { version = "0.10", features = ["stm32f103", "rt"] }
defmt = "0.3"
defmt-rtt = "0.4"

[features]
default = ["defmt-default"]
defmt-default = []

[profile.dev.package."*"]
opt-level = "z"

[profile.release]
debug = 2
